# mibox

./: .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
drive/: Cargo.toml
drive/src/: entry.rs  error.rs  lib.rs
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  server.rs  startup.rs
src/axum_server/: error.rs  mod.rs
src/axum_server/handlers/: download.rs  listing.rs  removal.rs  search.rs  upload.rs
src/core/: mod.rs
src/core/drive/: mod.rs
src/domain/: drive.rs  drive_file.rs  mod.rs
src/routes/: download.rs  health_check.rs  mod.rs
src/routes/file/api/: list.rs  mod.rs  remove.rs  upload.rs
src/routes/file/views/: files.rs  home.rs
src/server/: mod.rs
src/services/: mod.rs
src/services/download/: mod.rs
src/services/fallback/: mod.rs
src/services/listing/: mod.rs
src/services/removal/: mod.rs
src/services/search/: mod.rs
src/services/upload/: mod.rs
templates/: files.html  home.html
tests/api/: download.rs  helpers.rs  main.rs
webapp/: .dockerignore  Cargo.toml  Dockerfile
webapp/configuration/: base.yaml
webapp/src/: configuration.rs  error.rs  lib.rs  middleware.rs  server.rs  telemetry.rs
webapp/src/api/: directory.rs  health.rs  mod.rs
webapp/src/application/: mod.rs
webapp/src/drive/: entry.rs  mod.rs
webapp/src/handlers/: directory.rs  fallback.rs  file.rs  mod.rs  upload.rs
webapp/src/handlers/drive/: create_dir.rs  list.rs  mod.rs  remove_dir.rs  update_dir.rs
webapp/src/handlers/file/: delete.rs  download.rs  mod.rs  upload.rs
webapp/src/views/: boxpath.rs  create_directory.rs  delete_directory.rs  directory.rs  file.rs  home.rs  mod.rs
webapp/templates/: base.layout.html  create.directory.form.html  create.page.html  directory.partial.html  footer.partial.html  home.page.html  login.page.html  show.page.html  signup.page.html
webapp/tests/api/: health.rs  helpers.rs  main.rs  upload.rs
webapp/tests/api/directory/: create_dir.rs  mod.rs  remove_dir.rs  update_dir.rs
webapp/tests/api/drive/: create_dir.rs  remove_dir.rs  update_dir.rs
webapp/tests/api/file/: delete.rs  download.rs  mod.rs  upload.rs
