[package]
name = "mibox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = { git = "https://github.com/tokio-rs/axum", features = ["tracing"] }
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
mime_guess = "2.0.4"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "mibox"
path = "bin/main.rs"
