[package]
name = "mibox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mibox"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["form", "macros", "query"] }
base64 = "0.21.7"
chrono = "0.4.31"
config = "0.13.4"
futures = "0.3.30"
itertools = "0.12.1"
mime_guess = "2.0.4"
once_cell = "1"
serde = { version = "1.0.195", features = ["derive"] }
serde-aux = "3"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.5.0", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
uuid = { version = "1.6.1", features = ["v4"] }


[dev-dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
