[package]
name = "mibox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["fs", "rt", "io-util"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[[bin]]
path = "bin/server.rs"
name = "mibox"
