[package]
name = "drive"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"
[dependencies]
bytes = "1.6.0"
futures-core = "0.3.30"
# anyhow = "1.0.79"
# axum = { version = "0.7.3", features = ["form", "macros", "query", "multipart"] }
# axum-extra = { version = "0.9.2", features = ["query", "cookie", "cookie-signed"] }
# chrono = "0.4.31"
# config = "0.14"
# drive = { path = "../drive" }
# futures = "0.3.30"
# hmac = { version = "0.12", features = ["std"] }
# once_cell = "1"
# rand = { version = "0.8.5", features = ["std_rng"] }
# rand_core = "0.6.4"
# secrecy = { version = "0.8", features = ["serde"] }
# serde = { version = "1.0.195", features = ["derive"] }
# serde-aux = "3"
# serde_json = "1.0.111"
# sha2 = "0.10"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "io-util", "fs", "signal"] }
tokio-util = { version = "0.7.11", features = ["io"] }
# tokio-util = { version = "0.7.10", features = ["io"] }
# tower = "0.4.13"
# tower-http = { version = "0.5.0", features = ["trace"] }
# tracing = "0.1.40"
# tracing-bunyan-formatter = "0.3.9"
# tracing-log = "0.1"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
# uuid = { version = "1.6.1", features = ["v4"] }
#
#
# [dev-dependencies.reqwest]
# version = "0.11"
# default-features = false
# features = ["json", "rustls-tls", "cookies", "multipart", "stream"]
#
